# grpc-container-apps-dapr

./: .gitignore  readme.md
backend/grpc-test/api/: build.rs
backend/grpc-test/api/src/: server.rs
backend/test/: Cargo.toml  build.rs
frontend/grpc-test/: package-lock.json  package.json
frontend/grpc-test/src/: App.tsx
frontend/sycamore-test/: Cargo.toml  index.html
frontend/sycamore-test/src/: main.rs
frontend/typescript-client/: TestServiceClientPb.ts
frontend/yew-test/: Cargo.toml  build.rs
grpc-test/: Cargo.toml
grpc-test/api/: Cargo.toml  build.rs
grpc-test/api/src/: server.rs
grpc-test/frontend/: Cargo.toml  build.rs
grpc-test/frontend/src/: main.rs
infrastructure/test/src/: client.rs  server.rs
proto/: test.proto
