[package]
name = "grpc-container-apps-dapr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-server"
path = "src/server.rs"

[[bin]]
name = "test-client"
path = "src/client.rs"

[dependencies]
tonic = "0.8"
tonic-web = "0.4"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8"
